- Fix node form fieldsets being broken in IE after Safari/Konqueror fix.

--- a/misc/drupal.css
+++ b/misc/drupal.css
@@ -1,4 +1,4 @@
-/* $Id: drupal.css,v 1.101.2.1 2005-05-21 11:53:36 dries Exp $ */
+/* $Id: drupal.css,v 1.101.2.2 2005-05-31 23:24:18 unconed Exp $ */
 
 /*
 ** HTML elements
@@ -171,7 +171,10 @@ tr.light .form-item, tr.dark .form-item {
   display: block;
   width: 95%;
 }
-
+* html .node-form fieldset {
+/* Note: IE-only CSS due to "* html" escape. Sadly required for fieldsets to appear correctly. */
+  display: inline;
+}
 .node-form .admin .form-item .title {
   margin-top: 0;
 }
